# Phantom-OS-KubernetesOptions

./: .gitignore  CLAUDE.md  README.md  architecture-decision-argocd-topology.md  architecture.md  dh_tags.py  edge-kubernetes-git-analysis.md  host-config.yaml.template  kos-implmentation-plan-v1.md  offline-vs-online-argocd.md
.claude/: settings.json
apps/hello/: deployment.yaml  service.yaml
docs/: architecture.md  bringing-up-a-robot.md  cpu-isolation.md  credentials.md  dockerhub-creds.md  github-app-auth.md  image-flow-and-registry-bootstrap.md  new-machine-deployment-walkthrough.md  operations.md  ops-tui-dev-guide.md  ops-tui-user-guide.md  ops-tui.md  phantom-psi-stack.md  positronic-cheatsheet.md  positronic-design.md  preempt_rt_update.md  quick-start.md  quickstart-build.md  quickstart-install.md  quickstart-positronic-policy.md  requirements.md  rt-kernel-build-flags.md  system-test-rfc-0002.md  teleop-changes.md  trouble-shooting-guide.md
docs/archive/: architecture-decision-argocd-topology.md  kos-implmentation-plan-v1.md
docs/internal/: REQUIREMENTS-build.md  ai-api-server-and-dma-ethercat-orchestration.md  architecture.md  cpu-isolation.md  dockerhub-creds.md  making-repo-private.md  (+9 more)
gitops/: root-app.yaml
host-config-templates/: README.md
scripts/: bootstrap-robot.sh  build-deb.sh  build-images-deb.sh  configure-host.sh  configure-inotify-limits.sh  configure-k0s-containerd-mirror.sh  configure-k0s-nvidia-runtime.sh  configure-usb-power.sh  diagnose-positronic.sh  dma-cmd.sh  extract-models-to-host.sh  install-gaia-host-services.sh  install-image-bundle.sh  install-phantom-control-api.sh  load-image-tars.sh  policy.sh  positronic.sh  post-install-cleanup.sh  preload-registry-image.sh  prime-registry-cache.sh  prune-registry-tags.sh  rebind-stuck-pvc.sh  reset-deployment.sh  resize-registry-pvc.sh  teardown.sh  thor-perfmon.md  thor-perfmon.py  validate-local-registry.sh  workload.sh
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
tools/phantomos-ops/: .gitignore  README.md  build.sh  pyproject.toml
tools/phantomos-ops/src/phantomos_ops/: __init__.py  __main__.py  _build.py  app.py  env.py  lock.py  manifest.py  manifest.yaml  repo.py  runner.py  safety.py  state.py  theme.tcss
tools/phantomos-ops/src/phantomos_ops/forms/: __init__.py  bootstrap_bring_online.py  positronic_exec.py  positronic_logs.py  registry_prime.py  registry_prune.py  streams_raw.py
tools/phantomos-ops/src/phantomos_ops/screens/: bridge_modals.py  confirm.py  help.py  main.py  recovery.py  run.py  search.py
tools/phantomos-ops/tests/: test_app_boots.py  test_confirm_modal.py  test_env.py  test_forms.py  test_improvements.py  test_m5_polish.py  test_manifest_loader.py  test_production_manifest.py  test_read_only.py  test_recovery.py  test_repo_discovery.py  test_run_screen.py  test_runner.py  test_runner_bridge.py
(+296 files in other folders)
