[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantomos-ops"
version = "0.1.0"
description = "Textual TUI launcher for the phantomos fleet operator scripts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Foundation Robotics" }]

dependencies = [
  # Tested floor: the suite is verified against the textual 8.x line.
  # The original >=0.50 floor predated several APIs the screens use;
  # pin to the major series we actually run so a stale textual can't
  # silently break the layout.
  "textual>=8.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "textual-dev>=1.0",
]

[project.scripts]
phantomos-ops = "phantomos_ops.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phantomos_ops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Disable third-party plugin auto-discovery so a polluted PYTHONPATH
# (e.g. /opt/ros/.../site-packages) can't drag launch_testing or
# similar into our test session.
addopts = "-p no:cacheprovider"
# Belt + braces: also force explicit plugin opt-in via env.
required_plugins = ["pytest-asyncio"]
# Each run_test() spins up and tears down its own event loop; asyncio's
# subprocess transport is finalized by GC *after* that loop closes,
# which CPython reports as "Exception ignored in ... __del__: Event loop
# is closed". It's a harmless test-teardown artifact (in the real app
# the loop outlives every job), so silence just that one to keep the
# suite output clean without masking genuine unraisable exceptions.
filterwarnings = [
  "ignore:Exception ignored in.*BaseSubprocessTransport.*:pytest.PytestUnraisableExceptionWarning",
]
